lab4/3-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  selector:
    matchLabels:
      app: position-simulator
  replicas: 1
  template: 
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
      - name: position-simulator
        image: kensipe/fleetman-position-simulator:1
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  selector:
    matchLabels:
      app: position-tracker
  replicas: 1
  template: 
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
      - name: position-tracker
        image: kensipe/fleetman-position-tracker:1
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  template: 
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: kensipe/fleetman-api-gateway:1
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template: 
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: kensipe/fleetman-webapp-angular:1
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-telemetry
spec:
  selector:
    matchLabels:
      app: vehicle-telemetry
  replicas: 1
  template: 
    metadata:
      labels:
        app: vehicle-telemetry
    spec:
      containers:
      - name: vehicle-telemtry
        image: kensipe/fleetman-vehicle-telemetry:1
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
spec:
  selector:
    matchLabels:
      app: staff-service
  replicas: 1
  template: 
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
      - name: staff-service
        image: kensipe/fleetman-staff-service:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      nodePort: 30080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker

spec:
  selector:
    app: position-tracker
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-vehicle-telemetry
spec:
  selector:
    app: vehicle-telemetry
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
spec:
  selector:
    app: staff-service
  ports:
    - name: http
      port: 8080
  type: ClusterIP
