lab4/ref-vs-dr.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  gateways:
    - ingress-gateway-configuration
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: v2
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"name":"fleetman-webapp","namespace":"default"},"spec":{"host":"fleetman-webapp.default.svc.cluster.local","subsets":[{"labels":{"version":"v1"},"name":"v1"},{"labels":{"version":"v2"},"name":"v2"}]}}
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
